bindings/c/include/zlink.h

typedef unsigned __int64 uint64_t;
typedef unsigned __int32 uint32_t;
/******************************************************************************/
/*  0MQ message definition.                                                   */
/******************************************************************************/
/* ========== Message type and helpers ========== */
typedef struct zlink_msg_t
{
#if defined(_MSC_VER) && (defined(_M_X64) || defined(_M_ARM64))
    __declspec(align (8)) unsigned char _[64];
#elif defined(_MSC_VER)                                                        \
  && (defined(_M_IX86) || defined(_M_ARM_ARMV7VE) || defined(_M_ARM))
    __declspec(align (4)) unsigned char _[64];
#elif defined(__GNUC__) || defined(__INTEL_COMPILER)                           \
  || (defined(__SUNPRO_C) && __SUNPRO_C >= 0x590)                              \
  || (defined(__SUNPRO_CC) && __SUNPRO_CC >= 0x590)
    unsigned char _[64] __attribute__ ((aligned (sizeof (void *))));
#else
    unsigned char _[64];
#endif
} zlink_msg_t;
typedef struct zlink_routing_id_t
{
    uint8_t size;
    uint8_t data[255];
} zlink_routing_id_t;
typedef void (zlink_free_fn) (void *data_, void *hint_);
typedef struct zlink_actor_ref_t
{
    zlink_routing_id_t node_rid;
    char actor_id[ZLINK_ACTOR_ID_MAX];
    uint64_t generation;
} zlink_actor_ref_t;
typedef struct zlink_actor_recv_info_t
{
    zlink_actor_ref_t actor;
    zlink_routing_id_t source_node_rid;
    zlink_routing_id_t source_session_rid;
    uint32_t flags;
} zlink_actor_recv_info_t;
typedef struct zlink_actor_join_info_t
{
    zlink_actor_ref_t source_actor;
    zlink_actor_ref_t target_actor;
    zlink_routing_id_t source_node_rid;
    zlink_routing_id_t source_spot_rid;
    zlink_routing_id_t target_node_rid;
    zlink_routing_id_t target_spot_rid;
    uint64_t join_epoch;
    void *request;
    uint32_t flags;
} zlink_actor_join_info_t;
typedef void (*zlink_reply_handler_fn) (
  zlink_request_result_t result_,
  zlink_msg_t *parts_,
  size_t part_count_,
  void *userdata_);
typedef void (*zlink_actor_join_handler_fn) (
  const zlink_actor_join_result_t *result_,
  zlink_msg_t *parts_,
  size_t part_count_,
  void *userdata_);
typedef void (*zlink_actor_lookup_handler_fn) (
  const zlink_actor_lookup_result_t *result_,
  void *userdata_);
typedef void (*zlink_spot_actor_lifecycle_handler_fn) (
  void *spot_,
  const zlink_spot_actor_lifecycle_info_t *info_,
  void *userdata_);
typedef enum zlink_part_flag_t
{
    ZLINK_PART_FINAL = 0,
    ZLINK_PART_MORE = 1
} zlink_part_flag_t;
ZLINK_EXPORT zlink_config_result_t zlink_set_spot_option (void *handle_,
                                         zlink_spot_option_t option_,
                                         const void *optval_,
                                         size_t optvallen_);
ZLINK_EXPORT zlink_config_result_t zlink_get_spot_option (void *handle_,
                                         zlink_spot_option_t option_,
                                         void *optval_,
                                         size_t *optvallen_);
/* ========== Helper substrate layer (*_part) ========== */
ZLINK_EXPORT zlink_submit_result_t zlink_spot_send_channel_part (
  void *spot_,
  const char *channel_name_,
  zlink_msg_t *part_,
  zlink_send_flags_t flags_,
  zlink_part_flag_t part_flag_);
/* ========== Helper substrate layer (*_part) ========== */
ZLINK_EXPORT zlink_submit_result_t zlink_spot_publish_part (
  void *spot_,
  const char *topic_id_,
  zlink_msg_t *part_,
  zlink_send_flags_t flags_,
  zlink_part_flag_t part_flag_);
/* ========== Helper substrate layer (*_part) ========== */
ZLINK_EXPORT zlink_recv_result_t zlink_spot_subscribe_part (
  void *spot_,
  const zlink_routing_id_t **source_rid_out_,
  char *topic_id_buf_,
  size_t topic_id_capacity_,
  size_t *topic_id_len_out_,
  zlink_msg_t *part_out_,
  zlink_part_flag_t *has_more_out_,
  zlink_recv_flags_t flags_);
ZLINK_EXPORT zlink_recv_result_t zlink_spot_subscription_event_recv (
  void *spot_,
  const zlink_routing_id_t **source_rid_out_,
  int *subscribed_out_,
  char *topic_id_buf_,
  size_t topic_id_capacity_,
  size_t *topic_id_len_out_,
  zlink_recv_flags_t flags_);
/* ========== Helper substrate layer (*_part) ========== */
ZLINK_EXPORT zlink_submit_result_t zlink_spot_request_channel_part (
  void *spot_,
  const char *channel_name_,
  zlink_msg_t *part_,
  zlink_reply_handler_fn handler_,
  void *userdata_,
  zlink_send_flags_t flags_,
  zlink_part_flag_t part_flag_,
  uint32_t timeout_ms_);
ZLINK_EXPORT zlink_config_result_t zlink_subscription_at (void *handle_,
                                         size_t index_,
                                         char *filter_out_,
                                         size_t *filter_len_inout_,
                                         int *is_pattern_out_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_actor_new (
  void *node_,
  const char *actor_id_,
  zlink_actor_ref_t *actor_out_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_actor_lookup (
  void *node_,
  const char *actor_id_,
  zlink_actor_ref_t *out_);
ZLINK_EXPORT zlink_submit_result_t zlink_remote_actor_get_ref (
  void *node_,
  const zlink_routing_id_t *target_node_rid_,
  const char *actor_id_,
  zlink_actor_lookup_handler_fn handler_,
  void *userdata_,
  uint32_t timeout_ms_);
ZLINK_EXPORT zlink_submit_result_t zlink_spot_node_actor_destroy (
  void *node_,
  const zlink_actor_ref_t *actor_,
  zlink_reply_handler_fn handler_,
  void *userdata_,
  uint32_t timeout_ms_);
ZLINK_EXPORT zlink_submit_result_t zlink_spot_node_actor_join_spot (
  void *node_,
  const zlink_actor_ref_t *actor_,
  const zlink_routing_id_t *dest_node_rid_,
  const zlink_routing_id_t *dest_spot_rid_,
  zlink_msg_t *parts_,
  size_t part_count_,
  zlink_actor_join_handler_fn handler_,
  void *userdata_,
  zlink_send_flags_t flags_,
  uint32_t timeout_ms_);
ZLINK_EXPORT zlink_recv_result_t zlink_spot_actor_join_recv (
  void *spot_,
  zlink_actor_join_info_t *info_out_,
  zlink_msg_t **parts_out_,
  size_t *part_count_out_,
  zlink_recv_flags_t flags_);
ZLINK_EXPORT zlink_submit_result_t zlink_spot_actor_join_reply (
  void *spot_,
  const zlink_actor_join_info_t *info_,
  uint32_t accepted_,
  zlink_msg_t *parts_,
  size_t part_count_);
ZLINK_EXPORT zlink_submit_result_t zlink_spot_node_actor_leave_spot (
  void *node_,
  const zlink_actor_ref_t *actor_,
  const zlink_routing_id_t *current_spot_rid_,
  zlink_reply_handler_fn handler_,
  void *userdata_,
  uint32_t timeout_ms_);
ZLINK_EXPORT zlink_recv_result_t zlink_spot_node_actor_recv_part (
  void *node_,
  const zlink_actor_ref_t *actor_,
  zlink_actor_recv_info_t *info_out_,
  zlink_msg_t *part_out_,
  zlink_part_flag_t *has_more_out_,
  zlink_recv_flags_t flags_);
ZLINK_EXPORT zlink_submit_result_t zlink_spot_node_actor_send_bound_session_msg (
  void *node_,
  const zlink_actor_ref_t *actor_,
  zlink_msg_t *message_,
  zlink_send_flags_t flags_);
ZLINK_EXPORT zlink_handler_result_t zlink_spot_actor_lifecycle_handler (
  void *spot_,
  zlink_spot_actor_lifecycle_handler_fn on_join_,
  zlink_spot_actor_lifecycle_handler_fn on_leave_,
  void *userdata_);
ZLINK_EXPORT zlink_request_result_t zlink_spot_node_actor_close_bound_session (
  void *node_,
  const zlink_actor_ref_t *actor_,
  uint32_t timeout_ms_);
typedef struct zlink_spot_node_peer_entry_t
{
    char channel_name[256];
    char local_endpoint[256];
    char peer_endpoint[256];
    zlink_spot_peer_source_t source;
    zlink_spot_peer_kind_t kind;
    zlink_spot_peer_state_t state;
    uint32_t weight;
    uint64_t connected_since_ms;
    uint64_t last_changed_ms;
} zlink_spot_node_peer_entry_t;
typedef struct zlink_spot_node_peer_filter_t
{
    char peer_endpoint[256];
    zlink_spot_peer_source_t source;
    zlink_spot_peer_state_t state;
} zlink_spot_node_peer_filter_t;
typedef struct zlink_spot_node_subject_entry_t
{
    zlink_spot_role_t role;
    char subject[256];
    uint32_t subject_kind;
    uint32_t ready_peer_count;
    uint32_t active_peer_count;
    uint64_t last_changed_ms;
} zlink_spot_node_subject_entry_t;
typedef struct zlink_spot_node_subject_filter_t
{
    zlink_spot_role_t role;
    char subject[256];
    uint32_t subject_kind;
} zlink_spot_node_subject_filter_t;
typedef struct zlink_spot_node_socket_snapshot_filter_t
{
    zlink_spot_node_socket_owner_t owner;
    zlink_socket_type_t socket_type;
    char socket_name[64];
} zlink_spot_node_socket_snapshot_filter_t;
typedef struct zlink_spot_node_socket_snapshot_entry_t
{
    zlink_spot_node_socket_owner_t owner;
    uint64_t owner_id;
    char owner_name[64];
    char socket_name[64];
    zlink_socket_type_t socket_type;
    uint32_t auto_hwm_visible;
    zlink_monitor_snapshot_t snapshot;
} zlink_spot_node_socket_snapshot_entry_t;
typedef struct zlink_spot_node_spot_entry_t
{
    zlink_routing_id_t spot_rid;
    uint32_t dispatch_handler_attached;
    uint32_t joined_actor_count;
    uint32_t pending_actor_join_count;
    uint32_t route_synced;
    uint64_t last_changed_ms;
} zlink_spot_node_spot_entry_t;
typedef struct zlink_spot_node_actor_entry_t
{
    zlink_actor_ref_t actor;
    uint32_t joined;
    zlink_routing_id_t joined_spot_rid;
    uint32_t route_synced;
    uint32_t pending_message_count;
    uint64_t last_changed_ms;
} zlink_spot_node_actor_entry_t;
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_peers_query (
  void *node_,
  const zlink_spot_node_peer_filter_t *filter_,
  zlink_spot_node_peer_entry_t *entries_,
  size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_subjects_snapshot (
  void *node_,
  const zlink_spot_node_subject_filter_t *filter_,
  zlink_spot_node_subject_entry_t *entries_,
  size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_internal_sockets_snapshot (
  void *node_,
  const zlink_spot_node_socket_snapshot_filter_t *filter_,
  zlink_spot_node_socket_snapshot_entry_t *entries_,
  size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_spots_snapshot (
  void *node_,
  zlink_spot_node_spot_entry_t *entries_,
  size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_node_actors_snapshot (
  void *node_,
  zlink_spot_node_actor_entry_t *entries_,
  size_t *count_);
ZLINK_EXPORT zlink_config_result_t zlink_spot_actors_snapshot (
  void *spot_,
  zlink_actor_ref_t *entries_,
  size_t *count_);
/******************************************************************************/
/*  Timers                                                                    */
/******************************************************************************/

typedef void (*zlink_timer_handler_fn) (void *timer_,
                                        uint64_t fire_count_,
                                        void *userdata_);
ZLINK_EXPORT void *zlink_timer_new (void);
ZLINK_EXPORT void *zlink_spot_timer_new (void *spot_);
ZLINK_EXPORT zlink_close_result_t zlink_timer_destroy (void **timer_p_);
ZLINK_EXPORT zlink_config_result_t zlink_timer_start (void *timer_,
                                    uint64_t interval_ns_,
                                    uint64_t repeat_count_);
ZLINK_EXPORT zlink_config_result_t zlink_timer_stop (void *timer_);
ZLINK_EXPORT zlink_recv_result_t zlink_timer_recv (void *timer_,
                                   uint64_t *fire_count_out_);
ZLINK_EXPORT zlink_handler_result_t zlink_timer_handler (void *timer_,
                                      zlink_timer_handler_fn handler_,
                                      void *userdata_);
typedef void (zlink_thread_fn) (void *);