bindings/dotnet/src/Zlink/Runtime/Native/NativeMethods.Service.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_peers_query(IntPtr node,
        IntPtr filter, IntPtr entries, ref nuint count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_subjects_snapshot(IntPtr node,
        IntPtr filter, IntPtr entries, ref nuint count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_internal_sockets_snapshot(
        IntPtr node, IntPtr filter, IntPtr entries, ref nuint count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_actor_new(IntPtr node,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string actorId,
        out ZlinkActorRef actorRef);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_actor_destroy(IntPtr node,
        ref ZlinkActorRef actor,
        IntPtr handler,
        IntPtr userData,
        uint timeoutMs);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_actor_lookup(IntPtr node,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string actorId,
        out ZlinkActorRef actorRef);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_remote_actor_get_ref(
        IntPtr node,
        ref ZlinkRoutingId targetNodeRid,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string actorId,
        IntPtr handler,
        IntPtr userData,
        uint timeoutMs);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_actor_join_spot(IntPtr node,
        ref ZlinkActorRef actor,
        ref ZlinkRoutingId destNodeRid,
        ref ZlinkRoutingId destSpotRid,
        ref ZlinkMsg message,
        nuint partCount,
        IntPtr handler,
        IntPtr userData,
        int flags,
        uint timeoutMs);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_actor_join_recv(IntPtr spot,
        out ZlinkActorJoinInfo info,
        out IntPtr parts,
        out nuint partCount,
        int flags);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_actor_join_reply(IntPtr spot,
        ref ZlinkActorJoinInfo info,
        uint accepted,
        ref ZlinkMsg message,
        nuint partCount);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl,
        EntryPoint = "zlink_spot_actor_join_reply")]
    internal static extern int zlink_spot_actor_join_reply_empty(IntPtr spot,
        ref ZlinkActorJoinInfo info,
        uint accepted,
        IntPtr parts,
        nuint partCount);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_actor_leave_spot(IntPtr node,
        ref ZlinkActorRef actor,
        ref ZlinkRoutingId destSpotRid,
        IntPtr handler,
        IntPtr userData,
        uint timeoutMs);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_actor_recv_part(IntPtr node,
        ref ZlinkActorRef actor,
        out ZlinkActorRecvInfo info,
        ref ZlinkMsg part,
        out ZlinkPartFlag hasMore,
        int flags);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_actor_lifecycle_handler(
        IntPtr spot,
        NativeMethods.ZlinkSpotActorLifecycleHandlerDelegate? onJoin,
        NativeMethods.ZlinkSpotActorLifecycleHandlerDelegate? onLeave,
        IntPtr userData);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_actor_send_bound_session_msg(
        IntPtr node,
        ref ZlinkActorRef actor,
        ref ZlinkMsg message,
        int flags);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_actor_close_bound_session(
        IntPtr node,
        ref ZlinkActorRef actor,
        uint timeoutMs);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_spots_snapshot(IntPtr node,
        IntPtr entries,
        ref nuint count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_actors_snapshot(IntPtr node,
        IntPtr entries,
        ref nuint count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_actors_snapshot(IntPtr spot,
        IntPtr entries,
        ref nuint count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_send_channel_part(IntPtr spot,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string channelName,
        ref ZlinkMsg part, int flags, ZlinkPartFlag partFlag);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_request_channel_part(IntPtr spot,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string channelName,
        ref ZlinkMsg part, IntPtr handler, IntPtr userData,
        int flags, ZlinkPartFlag partFlag, uint timeoutMs);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_set_spot_option(IntPtr spot,
        SpotOption option, IntPtr value, nuint valueSize);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_get_spot_option(IntPtr spot,
        SpotOption option, IntPtr value, ref nuint valueSize);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_subscription_at(IntPtr handle,
        nuint index, IntPtr filterOut, ref nuint filterLength,
        out int isPattern);

    [DllImport(LibraryName, EntryPoint = "zlink_spot_publish_part",
        CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe int zlink_spot_publish_part_utf8(IntPtr spot,
        byte* topicId, ref ZlinkMsg part, int flags, ZlinkPartFlag partFlag);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_subscribe_part(IntPtr spot,
        out IntPtr sourceRoutingId, byte[] topicIdBuffer,
        nuint topicIdCapacity, out nuint topicIdLenOut,
        ref ZlinkMsg part, out int hasMore, int flags);

    [DllImport(LibraryName, EntryPoint = "zlink_spot_subscribe_part",
        CallingConvention = CallingConvention.Cdecl)]
    internal static extern unsafe int zlink_spot_subscribe_part_buffer(
        IntPtr spot, out IntPtr sourceRoutingId, byte* topicIdBuffer,
        nuint topicIdCapacity, out nuint topicIdLenOut,
        ref ZlinkMsg part, out int hasMore, int flags);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_subscription_event_recv(IntPtr spot,
        out IntPtr sourceRoutingId, out int subscribed, byte[] topicIdBuffer,
        nuint topicIdCapacity, out nuint topicIdLenOut, int flags);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    internal delegate void ZlinkTimerHandlerDelegate(IntPtr timer,
        ulong fireCount, IntPtr userData);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_timer_new();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_spot_timer_new(IntPtr spot);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_timer_destroy(ref IntPtr timer);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_timer_start(IntPtr timer,
        ulong intervalNs, ulong repeatCount);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_timer_stop(IntPtr timer);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_timer_recv(IntPtr timer,
        out ulong fireCount);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_timer_handler(IntPtr timer,
        ZlinkTimerHandlerDelegate handler, IntPtr userData);
}
